# ImageTransformer

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
ImageProcessingLib/: CMakeLists.txt
ImageProcessingLib/include/: ImageProcessingLib.hpp  color_curve_lib.hpp
ImageProcessingLib/src/: ImageProcessingLib.cpp  color_curve_lib.cpp
ImageProcessingLib/tests/: CMakeLists.txt  tests.cpp
app/: main.cpp
color_curve_lib/: CMakeLists.txt
color_curve_lib/include/: color_curve_lib.hpp
color_curve_lib/src/: color_curve_lib.cpp
color_curve_lib/tests/: CMakeLists.txt  tests.cpp
